tdf#131088 Automatic Control Focus not working

regression from
    commit a361231b1363d072d737e9b1d411b71aa9550d84
    Date:   Fri May 10 10:13:12 2019 +0200
    fix wrong SET/QUERY flags passed to uno::Reference

Change-Id: Id0dd46c3d40f8acab980147c4c7f64911bc30d22